* Release 0.7.0
	* Fixed Bug #643251: 'Crud put and delete no longer work'.
	* Fixed Bug #632083: 'Apps under fast cgi can't log or create files'.
	* Fixed Bug #636098: 'The ubuntu package does not work on amd64'.
	* Fixed Bug #598629: 'Make backtraces not show in release'.

2010-09-06 Release 0.6.0
	* Fixed Bug #600490: 'Make a fast cgi deploy script'.
	* Fixed Bug #598628: 'make it so we can have development and production configs'.
	* Fixed Bug #585977: 'The configuration is hard coded'.
	* Fixed Bug #603021: 'If startup app build fails, rebuilding will always fail'.
	* Fixed Bug #598613: 'Invalid route format gives an ugly error message'.
	* Fixed Bug #612828: 'The ipc is too slow for large strings'.
	* Fixed Bug #509771: 'There is no way to upload files'.
	* Fixed Bug #613310: 'Connections fail with ab test'.
	* Fixed bug #603409: 'The ipc messages get truncated with binary data'.

2010-06-28 Release 0.5.0
	* Fixed bug #591855: 'Compilation needs to be more strict'.
	* Fixed bug #589959: 'gen configure server header_max_size is ignored'.
	* Fixed Bug #589820: 'Change configuration files to json'.
	* Fixed Bug #584748: 'Move from Tornado to Dornado'.
	* Fixed Bug #584807: 'Regex makes startup and requests extremely slow'.
	* Fixed Bug #594439: 'escape_value and unescape_value are slow'.
	* Fixed Bug #585528: 'Move the server and app to separate processes'.
	* Fixed Bug #597053: 'Failed builds should show in the browser'.
	* Fixed Bug #590977: 'Server is always old version RootinTootin_0.1'.
	* Fixed Bug #597049: '404 pages do not show in Chrome'.
	* Fixed Bug #586631: 'Rebuilding is too slow'.
	* Fixed Bug #598700: 'The server needs to show unhandled exceptions'.
	* Fixed Bug #598609: 'Large responses break the server'.
	* Fixed Bug #598615: 'Application console output should show on the server'.
	* Fixed Bug #584744: 'ppa does not work on ubuntu 10.04'.

2010-03-02 Release 0.4.0
	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.